@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -42,9 +42,9 @@ import jdk.test.lib.jvmti.DebugeeClass;
  *     1000 ms of sleep added to main thread to reduce probability of bad racing.
  *
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} mcontenter01.java
- * @run main/othervm/native --enable-preview -agentlib:mcontenter01 mcontenter01 platform
- * @run main/othervm/native --enable-preview -agentlib:mcontenter01 mcontenter01 virtual
+ * @compile mcontenter01.java
+ * @run main/othervm/native -agentlib:mcontenter01 mcontenter01 platform
+ * @run main/othervm/native -agentlib:mcontenter01 mcontenter01 virtual
  */
 
 
